# gemma-270m-from-scratch

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GitHub Topics  LICENSE  README.md  ROADMAP.md  Repository Description  SECURITY.md  pyproject.toml  requirements.txt
docs/: architecture.md  inference.md  model.md  results.md  tokenizer.md  training.md
